feat: Introduce four new blog posts and enhance site SEO with robots.txt, sitemap.xml, and meta tags.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Horizon | Science Blog</title>
     <meta name="description" content="Exploring the edges of science, engineering, and ethics.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://event-horizon-blog.com/">
+    <meta property="og:title" content="Event Horizon | Science Blog">
+    <meta property="og:description" content="Exploring the edges of science, engineering, and ethics.">
+    <meta property="og:image" content="https://event-horizon-blog.com/assets/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://event-horizon-blog.com/">
+    <meta property="twitter:title" content="Event Horizon | Science Blog">
+    <meta property="twitter:description" content="Exploring the edges of science, engineering, and ethics.">
+    <meta property="twitter:image" content="https://event-horizon-blog.com/assets/og-image.jpg">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Event Horizon",
+      "url": "https://event-horizon-blog.com/",
+      "description": "Exploring the edges of science, engineering, and ethics.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://event-horizon-blog.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
