feat: Add new blog posts, topics, and about pages, and update the index and sitemap.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a href="index.html" class="logo">EVENT HORIZON</a>
             <nav>
                 <a href="#latests">Latest</a>
-                <a href="#topics">Topics</a>
-                <a href="#about">About</a>
+                <a href="topics.html">Topics</a>
+                <a href="about.html">About</a>
             </nav>
         </div>
     </header>
