feat: introduce new blog posts covering diverse science and environmental ethics topics, and update site navigation and styling.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a href="index.html" class="logo">EVENT HORIZON</a>
             <nav>
                 <a href="#latests">Latest</a>
-                <a href="topics.html">Topics</a>
-                <a href="about.html">About</a>
+                <a href="#topics">Topics</a>
+                <a href="#about">About</a>
             </nav>
         </div>
     </header>
@@ -139,6 +139,77 @@
                         <a href="posts/weekly-science-roundup.html" class="read-more">Read Transmission &rarr;</a>
                     </div>
                 </article>
+            </div>
+        </section>
+
+        <section id="topics" class="container section-padding">
+            <h2 class="section-title">Transmission Logs</h2>
+            <div class="topics-grid">
+                <!-- Investigation -->
+                <section class="topic-section fade-in">
+                    <h2 class="section-title" style="font-size: 1.5rem; margin-bottom: 1rem;">Investigation</h2>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 10px;"><a href="posts/dupont-pfas-scandal.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                The Teflon Cover-Up</a></li>
+                        <li style="margin-bottom: 10px;"><a href="posts/monsanto-glyphosate-controversy.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                Manufactured Science</a></li>
+                    </ul>
+                </section>
+
+                <!-- Energy & Engineering -->
+                <section class="topic-section fade-in">
+                    <h2 class="section-title" style="font-size: 1.5rem; margin-bottom: 1rem;">Energy & Engineering</h2>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 10px;"><a href="posts/the-perfect-battery-material.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                The Perfect Battery Material</a></li>
+                        <li style="margin-bottom: 10px;"><a href="posts/why-jet-engines-dont-melt.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                Why Jet Engines Don't Melt</a></li>
+                    </ul>
+                </section>
+
+                <!-- Physics -->
+                <section class="topic-section fade-in">
+                    <h2 class="section-title" style="font-size: 1.5rem; margin-bottom: 1rem;">Physics</h2>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 10px;"><a href="posts/something-weird-happens-when-e-minus-mc2.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                Something Weird Happens When E=-mc²</a></li>
+                    </ul>
+                </section>
+
+                <!-- General Science -->
+                <section class="topic-section fade-in">
+                    <h2 class="section-title" style="font-size: 1.5rem; margin-bottom: 1rem;">General Science</h2>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 10px;"><a href="posts/weekly-science-roundup.html"
+                                style="color: var(--text-color); text-decoration: none; transition: color 0.3s;">&rarr;
+                                Weekly Roundup</a></li>
+                    </ul>
+                </section>
+            </div>
+        </section>
+
+        <section id="about" class="container section-padding">
+            <h2 class="section-title">About Event Horizon</h2>
+            <div class="post-card fade-in" style="padding: 2rem;">
+                <h3 class="card-title">Our Mission</h3>
+                <p style="margin-bottom: 1.5rem;">To illuminate the obscure, demystify the complex, and explore the
+                    boundaries of what is known.</p>
+
+                <h3 class="card-title">The Philosophy</h3>
+                <p style="margin-bottom: 1.5rem;">Event Horizon is not just a blog; it is a curation of the bleeding
+                    edge. We believe that science is not a static collection of facts, but a dynamic, often messy, and
+                    incredibly exciting process of discovery. From the quantum mechanics of negative mass to the
+                    macro-engineering of jet engines, and the ethical moralities of modern technology, we aim to bring
+                    you stories that challenge your perspective.</p>
+
+                <h3 class="card-title">The Curator</h3>
+                <p>This space is maintained by an enthusiast of the unknown. Inspired by the deep dives of creators like
+                    Veritasium, we summarize and expand upon the most fascinating scientific narratives of our time.</p>
             </div>
         </section>
     </main>
